# MultiSuSiE

./: README.md  pyproject.toml  tests.py
.github/workflows/: tests.yml
examples/: example_for_install_script.py
src/MultiSuSiE/: __init__.py  susiepy.py  susiepy_ss.py
tests/: conftest.py  test_bayes_factor_math.py  test_convergence_elbo.py  test_credible_sets_purity.py  test_individual_edge_cases.py  test_individual_vs_rss_consistency.py  test_input_validation.py  test_low_memory_behavior.py  test_output_contract.py  test_recovery_utils.py  test_rss_numerical_stability.py
