[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = 'MultiSuSiE'
authors = [
    {name = 'Jordan Rossen', email = 'jordanerossen@gmail.com'},
    {name = 'Omer Weissbrod', email = 'fake@fake.com'},
]
readme = 'README.md'
version='1.0'
dependencies = [
    'numpy', 
    'scipy', 
    'tqdm', 
    'numba'
]

[project.optional-dependencies]
test = [
    'pytest',
    'ruff',
    'black'
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Start with high-signal correctness checks and expand gradually.
select = ["E9", "F63", "F7", "F82"]

[tool.black]
line-length = 88
target-version = ['py311']

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "plotnine>=0.15.7",
]
